2009-10-31  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug #12394: Log deprecated method call in t3lib_tceforms_inline and remove the methods in 4.4 (thanks to Xavier Perseguers)

2009-10-30  Francois Suter  <francois@typo3.org>

	* Fixed bug #12406: Scheduler: Performed some minor cleanups in the BE module
	* Feature #12184: Scheduler: Added BE method to mark a stalled / died task as not running

2009-10-30  Steffen Kamper  <info@sk-typo3.de>

	* Follow-up to #12336: Little Flaws with MediaCE

2009-10-29  Francois Suter  <francois@typo3.org>

	* Fixed bug #12381: Scheduler: Changed TEXT fields to BLOBS for storing serialized data (thanks to Michael Klapper)

2009-10-29  Ernesto Baschny  <ernst@cron-it.de>

	* Fixed bug #12371: Warning issued on first load of install tool with open_basedir set

2009-10-28  Christian Kuhn  <lolli@schwarzbu.ch>

	* Follow-up to #12326: $label is already used, rename new variable to $optionLabel

2009-10-28  Dmitry Dulepov  <dmitry.dulepov@gmail.com>

	* Fixed bug #9795: Default values have no labels in the multiple select control inside the flexform

2009-10-27  Steffen Kamper  <info@sk-typo3.de>

	* Follow-up to #11370: Inconsistent Login Screen doesn't show system required errors
	* Fixed bug #12372: install: Login form message is shown as warning
	* Fixed bug #12355: Remove WIN-check in tsconfig_help::rebuild
	* Fixed bug #12364: Icon for content element 'Media'

2009-10-27  Christian Kuhn  <lolli@schwarzbu.ch>

	* Fixed bug #12356: Remove exclude=1 from lastlogin field of be_user TCA

2009-10-27  Francois Suter  <francois@typo3.org>

	* Fixed bug #12251: Scheduler: Don't show rights check on Windows

2009-10-27  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #12252: htmlArea RTE: errors are raised when extension rtehtmlarea_definitionlist is installed with TYPO3 4.3

2009-10-27  Steffen Kamper  <info@sk-typo3.de>

	* Updated wpplayer to version 2.0beta6
	* Fixed bug #12336: Little Flaws with MediaCE