@@ -2936,9 +2936,11 @@ class t3lib_stdGraphic	{
 	 * @param	string		The filename to write to
 	 * @return	mixed		The output of either imageGif, imagePng or imageJpeg based on the filename to write
 	 * @see imageWrite()
-	 * @deprecated since TYPO3 4.0
+	 * @deprecated since TYPO3 4.0, this function will be removed in TYPO3 4.5.
 	 */
 	function imageGif($destImg, $theImage)	{
+		t3lib_div::logDeprecatedFunction();
+
 		return $this->imageWrite($destImg, $theImage);
 	}
 
@@ -2948,9 +2950,11 @@ class t3lib_stdGraphic	{
 	 *
 	 * @param	string		Image filename
 	 * @return	pointer		Image Resource pointer
-	 * @deprecated since TYPO3 4.0
+	 * @deprecated since TYPO3 4.0, this function will be removed in TYPO3 4.5.
 	 */
 	function imageCreateFromGif($sourceImg)	{
+		t3lib_div::logDeprecatedFunction();
+
 		return $this->imageCreateFromFile($sourceImg);
 	}
 
